use valueof instead of new Boolean
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@274931 13f79535-47bb-0310-9956-ffa450edef68